--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <h1>HTML 실습</h1>
-        <ul>
-            <li><a href="./01/01.html">01. HTML 구조</a></li>
-        </ul>
+        <ol>
+            <li><a href="./01/01.html">HTML 구조</a></li>
+        </ol>
     </body>
 </html>
