--- a/02/02.html
+++ b/02/02.html
@@ -80,7 +80,7 @@
                     <img src="../img/css.png" alt="css" />
                 </div>
                 <p>
-                    Cascading Style Sheets(CSS)는 HTML이나 XML(XML의 방언인 SVG, XHTML 포함)로 작성된 문서의 표시 방법을 기술하기 위한 스타일 시트 언어
+                    <strong>Cascading Style Sheets(CSS)</strong>는 HTML이나 XML(XML의 방언인 SVG, XHTML 포함)로 작성된 문서의 표시 방법을 기술하기 위한 스타일 시트 언어
                 </p>
             </div>
         </section>
@@ -93,7 +93,7 @@
                     <img src="../img/js.png" alt="javascript" />
                 </div>
                 <p>
-                    웹 페이지를 위한 스크립트 언어로 가벼운, 인터프리터 혹은 just-in-time 컴파일 프로그래밍 언어로, 일급 함수를 지원
+                    <strong>Javascript</strong>는 웹 페이지를 위한 스크립트 언어로 가벼운, 인터프리터 혹은 just-in-time 컴파일 프로그래밍 언어로, 일급 함수를 지원
                 </p>
             </div>
         </section>
@@ -106,7 +106,7 @@
                     <img src="../img/react.png" alt="react" />
                 </div>
                 <p>
-                    사용자 인터페이스를 만들기 위한 JavaScript 라이브러리
+                    <strong>React</strong>는사용자 인터페이스를 만들기 위한 JavaScript 라이브러리
                 </p>
             </div>
         </section>
