--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
-<html lang="UTF-8">
-    <head>  
-        <title>K-digital 2기 HTML</title>
-    </head>
-    <body>
-        <h1>HTML 실습</h1>
+<html lang="ko">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>K-digital 2기 HTML</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hi+Melody&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="./index.css">
+</head>
+
+<body>
+    <header>
+        <h1>K-digital 2기 HTML</h1>
+    </header>
+    <main>
         <ol>
-            <li><a href="./01/01.html">HTML 구조</a></li>
+            <li><a href="./01/01.html">HTML 기초</a></li>
+            <li><a href="./02/02.html">CSS 기초</a></li>
+            <li><a href="./03/03.html">JS 기초</a></li>
         </ol>
-    </body>
+    </main>
+    <footer>
+        <ul>
+            <li><a
+                    href="https://www.inflearn.com/course/%EB%88%84%EA%B5%AC%EB%82%98-%EC%89%BD%EA%B2%8C-%EC%8B%9C%EC%9E%91%ED%95%98%EB%8A%94-%EC%9B%B9%EA%B0%9C%EB%B0%9C-%EA%B8%B0%EC%B4%88">HTML인프런</a>
+            </li>
+            <li><a href="https://www.w3schools.com/">W3School</a></li>
+            <li><a href="https://developer.mozilla.org">MDN</a></li>
+            <li><a href="https://github.com/MINISCV/kdt02_html">Github</a></li>
+            <li><a href="https://fonts.google.com/">GoogleFonts</a></li>
+            <li><a href="https://fontawesome.com/">FontAwesome</a></li>
+        </ul>
+    </footer>
+</body>
+
 </html>
