--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="./01/01.html">HTML 기초</a></li>
             <li><a href="./02/02.html">CSS 기초</a></li>
             <li><a href="./03/03.html">JS 기초</a></li>
+            <li><a href="./04/04.html">JS 문자열</a></li>
         </ol>
     </main>
     <footer>
