--- a/04/04.html
+++ b/04/04.html
@@ -19,7 +19,7 @@
 
 <body>
     <header>
-        <h1>K-digital 2기 JavaScript 문자열</h1>
+        <h1>K-digital 2기 JavaScript String</h1>
     </header>
     <main>
         <form>
