--- a/06/06.html
+++ b/06/06.html
@@ -13,19 +13,20 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="../index.css">
     <link rel="stylesheet" type="text/css" href="../js.css">
-    <link rel="stylesheet" type="text/css" href="./05.css">
-    <script src="./05.js"></script>
+    <link rel="stylesheet" type="text/css" href="./06.css">
+    <script src="./06.js"></script>
 </head>
 
 <body>
     <header>
-        <h1>K-digital 2기 JavaScript Array(로?또)</h1>
+        <h1>K-digital 2기 JavaScript DOM(주사위)</h1>
     </header>
     <main>
-        <div class="nlist" id="nlist">
+        <div class="mdiv">
+            <img src="../img/1.png" alt="주사위">
         </div>
-        <div class="btArea">
-            <button onclick="lotto()">로또번호 생성기</button>
+        <div class="mdiv">
+            <button>주사위 굴리기</button>
         </div>
     </main>
     <footer>
