--- a/07/07.html
+++ b/07/07.html
@@ -13,19 +13,35 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="../index.css">
     <link rel="stylesheet" type="text/css" href="../js.css">
-    <link rel="stylesheet" type="text/css" href="./05.css">
-    <script src="./05.js"></script>
+    <link rel="stylesheet" type="text/css" href="./07.css">
+    <script src="./07.js"></script>
 </head>
 
 <body>
     <header>
-        <h1>K-digital 2기 JavaScript Array(로?또)</h1>
+        <h1>K-digital 2기 JavaScript DOM(주사위)</h1>
     </header>
     <main>
-        <div class="nlist" id="nlist">
+        <div class="mdiv">
+            <div>
+                <h1>Computer</h1>
+                <img src="../img/1.png" alt="주사위">
+            </div>
+            <div>
+                <h1>User</h1>
+                <img src="../img/1.png" alt="주사위">
+            </div>
         </div>
-        <div class="btArea">
-            <button onclick="lotto()">로또번호 생성기</button>
+        <div class="mdiv">
+            <button>1 선택</button>
+            <button>2 선택</button>
+            <button>3 선택</button>
+            <button>4 선택</button>
+            <button>5 선택</button>
+            <button>6 선택</button>
+        </div>
+        <div class="mdiv" id="msg">
+            결과
         </div>
     </main>
     <footer>
