--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
             <li><a href="./01/01.html">HTML 기초</a></li>
             <li><a href="./02/02.html">CSS 기초</a></li>
             <li><a href="./03/03.html">JS 기초</a></li>
-            <li><a href="./04/04.html">JS 문자열</a></li>
-            <li><a href="./05/05.html">JS 배열</a></li>
+            <li><a href="./04/04.html">JS String</a></li>
+            <li><a href="./05/05.html">JS Array</a></li>
+            <li><a href="./06/06.html">JS Object / DOM</a></li>
+            <li><a href="./07/07.html">JS 주사위</a></li>
         </ol>
     </main>
     <footer>
