--- a/07/07.html
+++ b/07/07.html
@@ -32,14 +32,14 @@
                 <img src="../img/1.png" alt="주사위">
             </div>
         </div>
-        <div class="mdiv">
+        <form class="mdiv">
             <button>1 선택</button>
             <button>2 선택</button>
             <button>3 선택</button>
             <button>4 선택</button>
             <button>5 선택</button>
             <button>6 선택</button>
-        </div>
+        </form>
         <div class="mdiv" id="msg">
             결과
         </div>
