--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>K-digital 2기 HTML</title>
+    <title>K-digital 2기 Frontend</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hi+Melody&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <h1>K-digital 2기 HTML</h1>
+        <h1>K-digital 2기 Frontend</h1>
     </header>
     <main>
         <ol>
@@ -27,6 +27,7 @@
             <li><a href="./05/05.html">JS Array</a></li>
             <li><a href="./06/06.html">JS Object / DOM</a></li>
             <li><a href="./07/07.html">JS 주사위</a></li>
+            <li><a href="./08/08.html">JS 단위변환</a></li>
         </ol>
     </main>
     <footer>
