--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="./07/07.html">JS 주사위</a></li>
             <li><a href="./08/08.html">JS 단위변환</a></li>
             <li><a href="./09/09.html">JS 업다운 게임</a></li>
+            <li><a href="./10/10.html">JS 폭탄 게임</a></li>
         </ol>
     </main>
     <footer>
