--- a/11/11.html
+++ b/11/11.html
@@ -13,20 +13,19 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="../index.css">
     <link rel="stylesheet" type="text/css" href="../js.css">
-    <script src="./03.js"></script>
+    <link rel="stylesheet" type="text/css" href="./11.css">
+    <script src="./11.js"></script>
 </head>
 
 <body>
     <header>
         <h1>K-digital 2기 JavaScript</h1>
     </header>
-    <main>
-        <div>
-            <button onclick="Hello()">var 변수</button>
-            <button onclick="Hello2()">let 변수</button>
-            <button onclick="check()">확인</button>
-            <button onclick="checkFor()">문자열순회</button>
+    <main id="mvMain">
+        <div class="divDt">
+            <input type="date">
         </div>
+        <ul class="mvul"></ul>
     </main>
     <footer>
         <ul>
