--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>K-digital 2기 Frontend</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hi+Melody&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -30,6 +27,7 @@
             <li><a href="./08/08.html">JS 단위변환</a></li>
             <li><a href="./09/09.html">JS 업다운 게임</a></li>
             <li><a href="./10/10.html">JS 폭탄 게임</a></li>
+            <li><a href="./11/11.html">JS 국내 박스오피스</a></li>
         </ol>
     </main>
     <footer>
