--- a/11/11.html
+++ b/11/11.html
@@ -22,8 +22,15 @@
         <h1>K-digital 2기 JavaScript</h1>
     </header>
     <main id="mvMain">
-        <div class="divDt">
-            <input type="date">
+        <div class="menu">
+            <div class="divDt">
+                <input type="date">
+            </div>
+            <div class="divType">
+                <input type="radio" id="all" name="type" checked><label for="all">전체</label>
+                <input type="radio" id="commercial" name="type"><label for="commercial">상업영화</label>
+                <input type="radio" id="multi" name="type"><label for="multi">다양성영화</label>
+            </div>
         </div>
         <ul class="mvul"></ul>
     </main>
