--- a/11/11.html
+++ b/11/11.html
@@ -32,7 +32,10 @@
                 <input type="radio" id="multi" name="type"><label for="multi">다양성영화</label>
             </div>
         </div>
-        <ul class="mvul"></ul>
+        <div class="content">
+            <div class="poster"></div>
+            <ul class="mvul"></ul>
+        </div>
     </main>
     <footer>
         <ul>
