--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="./09/09.html">JS 업다운 게임</a></li>
             <li><a href="./10/10.html">JS 폭탄 게임</a></li>
             <li><a href="./11/11.html">JS 국내 박스오피스</a></li>
+            <li><a href="./12/12.html">JS 한국 관광 사진</a></li>
         </ol>
     </main>
     <footer>
