--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <li><a href="https://www.w3schools.com/">W3School</a></li>
             <li><a href="https://developer.mozilla.org">MDN</a></li>
             <li><a href="https://github.com/MINISCV/kdt02_html">Github</a></li>
+            <li><a href="https://kdt02-html-ashen.vercel.app/">Vercel</a></li>
             <li><a href="https://fonts.google.com/">GoogleFonts</a></li>
             <li><a href="https://fontawesome.com/">FontAwesome</a></li>
         </ul>
